@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fl_Progress now contrasts the label color with the bar
+	  color, so labels will be readable at all times.
 	- fl_read_image() didn't use the right red, green, and
 	  blue masks on XFree86.
 	- Fixed Quickdraw drawing of 3 and 4 sided polygons (STR
